--- a/Recvite/assets/css/style-bein.css
+++ b/Recvite/assets/css/style-bein.css
@@ -8,6 +8,10 @@
     -ms-user-select: none;
     -webkit-user-drag: none;
     -moz-user-drag: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* #27AAE2 */
     
 }
 
