--- a/Recvite/assets/css/style-bein.css
+++ b/Recvite/assets/css/style-bein.css
@@ -1,8 +1,8 @@
 .container-header
 {
-    background-color: rgba(0, 0, 0, 0.156);
+    background-color: #F5F5F5;
     width: 100%;
-    height: 900px;
+    height: 1000px;
     user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -11,19 +11,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* #27AAE2 */
-    
 }
 
-.container-header img
+
+.container-header svg
 {
-    width: 200px;
+   width: 1000px;
+}
+@media (max-width: 1100px) {
+    .container-header
+    {
+        height: 600px
+    }
+}
+@media (max-width: 550px) {
+    .container-header
+    {
+        height: 400px
+    }
+}
+
+.container-header #Dev{
     filter: grayscale(100%);
-    transition: 0.1s;
 }
 
-.container-header img:hover
+
+.container-header #Marketing {
+    filter: grayscale(100%);
+}
+
+.container-header #impression_copie {
+    filter: grayscale(100%);
+}
+.container-header #Creation
 {
-    cursor: pointer;
-    filter: grayscale(0%);
+    filter: grayscale(100%);
 }
