--- a/Recvite/assets/css/style.css
+++ b/Recvite/assets/css/style.css
@@ -249,10 +249,13 @@ img {
   top: 0px;
   z-index: -1;
   transition: all 500ms ease;
+  color: #272727 !important;
 }
 
 .theme-btn-one:hover:before{
   width: 100%;
+  background-color: white;
+  color: #272727 !important;
 }
 
 .pagination{
@@ -590,6 +593,7 @@ img {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid rgba(255,255,255,0.1);
+  background-color: #272727;
 }
 
 .main-header .sticky-header .outer-box{
@@ -611,6 +615,22 @@ img {
 
 .header-lower .logo-box{
   position: relative;
+  width: 250px;
+}
+
+/* 1250 */
+@media (max-width: 1250px) {
+  .header-lower .logo-box{
+    position: relative;
+    width: 200px;
+  }
+}
+/* 1200 */
+@media (max-width: 1200px) {
+  .header-lower .logo-box{
+    position: relative;
+    width: 150px;
+  }
 }
 
 .main-header.style-one .menu-area{
@@ -1710,6 +1730,8 @@ div#mCSB_1_container{
   position: relative;
   padding-bottom: 120px;
   padding-top: 50px;
+  background-color: white;
+  /* background-color: rgba(0, 0, 0, 0.156); */
 }
 
 .container-title-services-bein
@@ -1718,6 +1740,19 @@ div#mCSB_1_container{
   display: flex;
   justify-content: center !important;
   align-content: center !important;
+  flex-direction: column;
+  position: relative;
+}
+.container-title-services-bein p
+{
+  color:#27AAE2;
+  width: 100%;
+  position: absolute;
+  z-index: 100;
+  top: 20px;
+  line-height: 26px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .container-title-services-bein h2
@@ -1730,7 +1765,13 @@ div#mCSB_1_container{
   padding-bottom: 70px;
 }
 
-
+@media only screen and (max-width: 767px) {
+  .container-title-services-bein h2
+  {
+    font-size: 36px;
+    line-height: 44px;
+  }
+}
 .feature-block-one .inner-box{
   position: relative;
   display: block;
@@ -1858,6 +1899,7 @@ div#mCSB_1_container{
 .about-section{
   position: relative;
   padding: 120px 0px 100px 0px;
+  background-color: rgba(228, 228, 228, 0.27);
 }
 
 .image_block_1 .image-box{
