--- a/assets/css/style-bein.css
+++ b/assets/css/style-bein.css
@@ -84,3 +84,51 @@
     }
   }
   
+
+
+
+/* Loading Page */
+.loading
+{
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* display: none; */
+}
+
+.loading .container-image
+{
+    /* background-color: red; */
+    width: 500px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.loading .container-image .logo-loading
+{
+    width: 300px;
+    z-index: 2;
+}
+
+.loading .container-image .bird
+{
+    width:130px;
+    height: 130px;
+    background-image: url(../images/bird1.png);
+    background-size: 130px 130px;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    right: 380px;
+    top: 165px;
+    z-index: 3;
+}
